--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/ediopia/react-neo-wallets"
   },
   "scripts": {
     "start": "tsc --watch",
@@ -26,6 +26,8 @@
     "@material-ui/core": "^4.1.3",
     "@types/yup": "^0.26.18",
     "formik": "^1.5.7",
+    "o3-dapi-core": "^0.3.4",
+    "o3-dapi-neo": "^0.6.0",
     "react": "^16.8.6",
     "react-bulma-components": "^2.3.0",
     "react-dom": "^16.8.6",
