--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "react-neo-wallets",
-  "version": "1.0.0",
-  "description": "React Neo wallets",
-  "main": "lib/index.js",
+  "version": "1.0.1",
+  "description": "React Neo Wallets",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/ediopia/react-neo-wallets"
   },
   "scripts": {
     "start": "tsc --watch",
-    "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json"
+    "build": "",
+    "test": "",
+    "lint": ""
   },
   "author": {
     "name": "Eddie"
@@ -23,25 +23,20 @@
   },
   "dependencies": {
     "@cityofzion/neon-js": "^4.6.0",
-    "@material-ui/core": "^4.1.3",
+    "@types/node": "^12.0.10",
+    "@types/react": "^16.8.22",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-router-dom": "^4.3.4",
     "@types/yup": "^0.26.18",
+    "antd": "^3.20.0",
     "formik": "^1.5.7",
     "o3-dapi-core": "^0.3.4",
     "o3-dapi-neo": "^0.6.0",
     "react": "^16.8.6",
-    "react-bulma-components": "^2.3.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
+    "typescript": "^3.5.2",
+    "underscore": "^1.9.1",
     "yup": "^0.27.0"
-  },
-  "devDependencies": {
-    "@types/react": "^16.8.22",
-    "@types/react-dom": "^16.8.4",
-    "@types/node": "^12.0.10",
-    "@types/react-router-dom": "^4.3.4",
-    "prettier": "^1.18.2",
-    "tslint": "^5.18.0",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.2"
   }
 }
