--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-neo-wallets",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "React Neo Wallets",
+  "homepage": "https://ediopia.github.io/react-neo-wallets",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
@@ -11,7 +12,7 @@
     "start": "tsc --watch",
     "build": "",
     "test": "",
-    "lint": ""
+    "deploy": "gh-pages -d demo/build"
   },
   "author": {
     "name": "Eddie"
@@ -32,11 +33,12 @@
     "formik": "^1.5.7",
     "o3-dapi-core": "^0.3.4",
     "o3-dapi-neo": "^0.6.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "typescript": "^3.5.2",
     "underscore": "^1.9.1",
     "yup": "^0.27.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
