--- a/demo/package.json
+++ b/demo/package.json
@@ -2,6 +2,7 @@
   "name": "demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ediopia.github.io/react-neo-wallets",
   "peerDependencies": {
     "react": "^16.8.0",
     "react-dom": "^16.8.0"
